defektor/plugins/dev/ijk/HttpDelay/src/main/resources/virtual-service-http-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <svc-name>-http-delay
  namespace: <namespace>
spec:
  hosts:
    - <host>
  http:
    - fault:
        delay:
          fixedDelay: <seconds>s
          percent: <percentage>
      route:
        - destination:
            host: <host>
